完成d至chain部分

--- a/index.html
+++ b/index.html
@@ -4,51 +4,17 @@
     <meta http-equiv="Cache-Control" content="no-store">
     <meta charset="UTF-8">
     <title>测试</title>
+    <script src="dist/fm.js?b=4"></script>
     <script src="src/ramda.min.js"></script>
 </head>
 <body>
+<div id="main">??</div>
+
 <script>
-    const of=function (x) {
-        return new this(x);
-    };
-    const map=function (f) {
-        return  this.isNothing()
-                ?this.constructor.of(null)
-                :this.constructor.of(f(this.value));
-    };
-    const isNothing=function () {
-        return (this.value===null||this.value===undefined);
-    };
-    const join=function () {
-        return this.isNothing()?this.constructor.of(null):this.value;
-    };
-    const chain=function (f) {
-        return this.map(f).join();
-    };
-    const ap=function (otherContainer) {
-        return otherContainer.map(this.value);
-    };
-
-
-
-    const IO=function (f) {
-        this.value=f;
-    };
-    IO.of=function (x) {
-        return new IO(function () {
-            return x;
-        })
-    };
-    IO.prototype.map=function (f) {
-        return new IO(R.compose(f,this.value));
-    };
-
-    const re1=function () {
-        return "re1";
-    };
-
-
-
+    let a=fm.Maybe.of(null).chain(function (three) {
+        return fm.Maybe.of(2).map(R.add(three));
+    });
+    console.log(a);
 </script>
 </body>
 </html>
